components/test-app-167026275-java-quarkus-sample/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: test-app-167026275
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: test-app-167026275-java-quarkus-sample
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eltest-app-167026275-java-quarkus-sample
  namespace: nzcs02jc
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-test-app-167026275-java-quarkus-sample
    weight: null
status: {}
